--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,25 @@
 server.port=8877
 spring.application.name=gof23
-usp.enable.swagger=true
+
+
+# datasource
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://111.231.162.17:3306/study?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.filter.config.enabled=true
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-active=20
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.time-between-eviction-runs-millis=300000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.druid.maxOpenPreparedStatements=20
+spring.datasource.druid.connection-propertiesdruid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000;config.decrypt=true
+spring.datasource.druid.filter=stat,wall,log4j,config
